[package]
name = "abclang"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
phf = { version = "0.14.0", features = ["macros"] }
thiserror = { version = "2.0.18" }
parse-display = { version = "0.11.0" }
strum = { version = "0.28.0", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = { version = "18.0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.126" }
